pyarmor.error.log
14144 MainProcess 2023-09-27 16:16:12,095
Traceback (most recent call last):
  File "C:\Users\Bryan Edman\AppData\Local\Programs\Python\Python310\lib\site-packages\pyarmor\cli\__main__.py", line 702, in main
    main_entry(sys.argv[1:])
  File "C:\Users\Bryan Edman\AppData\Local\Programs\Python\Python310\lib\site-packages\pyarmor\cli\__main__.py", line 690, in main_entry
    return args.func(ctx, args)
  File "C:\Users\Bryan Edman\AppData\Local\Programs\Python\Python310\lib\site-packages\pyarmor\cli\__main__.py", line 229, in cmd_gen
    builder.process(options)
  File "C:\Users\Bryan Edman\AppData\Local\Programs\Python\Python310\lib\site-packages\pyarmor\cli\generate.py", line 156, in process
    self._obfuscate_scripts()
  File "C:\Users\Bryan Edman\AppData\Local\Programs\Python\Python310\lib\site-packages\pyarmor\cli\generate.py", line 119, in _obfuscate_scripts
    code = Pytransform3.generate_obfuscated_script(self.ctx, r)
  File "C:\Users\Bryan Edman\AppData\Local\Programs\Python\Python310\lib\site-packages\pyarmor\cli\core\__init__.py", line 103, in generate_obfuscated_script
    return m.generate_obfuscated_script(ctx, res)
  File "<maker>", line 665, in generate_obfuscated_script
  File "C:\Users\Bryan Edman\AppData\Local\Programs\Python\Python310\lib\site-packages\pyarmor\cli\__init__.py", line 16, in process
    return meth(self, res, *args, **kwargs)
  File "<maker>", line 473, in process
  File "C:\Users\Bryan Edman\AppData\Local\Programs\Python\Python310\lib\site-packages\pyarmor\cli\resource.py", line 119, in reparse
    self.mtree = ast.parse(''.join(lines), self.frozenname, 'exec')
  File "C:\Users\Bryan Edman\AppData\Local\Programs\Python\Python310\lib\ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<frozen NumberManipulatorGUI>", line 94
    root.iconbitmap("C:\Users\%USERNAME%\Redd Summit Dropbox\dupNumRemover_badNumRemover\GUI Version\phone.ico")
                                                                                                               ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape
